--- a/project/frontend/default.conf
+++ b/project/frontend/default.conf
@@ -6,5 +6,11 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
+
+        proxy_pass http://localhost:8080;  # Spring Boot 서버 주소 및 포트
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
