--- a/project/frontend/default.conf
+++ b/project/frontend/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  192.168.65.126;
+    server_name  localhost;
 
     location / {
         root   /usr/share/nginx/html;
