--- a/project/frontend/default.conf
+++ b/project/frontend/default.conf
@@ -7,7 +7,11 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
 
-
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /v1 {
