--- a/project/frontend/default.conf
+++ b/project/frontend/default.conf
@@ -1,3 +1,7 @@
+upstream apiserver {
+    server 127.0.0.1:8080;
+}
+
 server {
     listen       80;
     server_name  localhost;
@@ -5,11 +9,11 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     location /v1 {
-        proxy_pass http://backend:8080;
-        proxy_http_version 1.1;
+        proxy_pass http://apiserver/v1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
