--- a/project/frontend/default.conf
+++ b/project/frontend/default.conf
@@ -1,7 +1,3 @@
-upstream apiserver {
-    server 127.0.0.1:8080;
-}
-
 server {
     listen       80;
     server_name  localhost;
@@ -13,7 +9,7 @@ server {
     }
 
     location /v1 {
-        proxy_pass http://apiserver/v1;
+        proxy_pass http://backend/v1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
