--- a/project/frontend/default.conf
+++ b/project/frontend/default.conf
@@ -11,4 +11,7 @@ server {
     location /v1 {
         proxy_pass http://backend.com:8080;
     }
+    location /oauth2 {
+        proxy_pass http://backend.com:8080;
+    }
 }
